--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <title>Personal-Portfolio-Webpage</title>
 </head>
@@ -22,37 +24,54 @@
     <main>
         <section id="welcome-section">
             <h1>Hey I am S4ch1</h1>
-            <h2><em>A web developer</em></h2>
+            <h2>A web developer</h2>
         </section>
         <section id="projects">
             <h2>These are some of my projects</h2>
             <div class="project-tile">
-                <a href="https://github.com/s4ch1/Chester-Bennington-Text-Portrait" target="_blank">Chester Bennington Text Portrait</a><br>
-                <img alt="Text portrait of Chester Bennington" src="./images/cbtp.png" height="50%" width="50%">
+                <h3>Chester Bennington Text Portrait</h3>
+                <a href="https://github.com/s4ch1/Chester-Bennington-Text-Portrait" target="_blank">
+                    <img alt="Text portrait of Chester Bennington" src="./images/cbtp.png" height="50%" width="50%">
+                </a><br>
             </div>
             <div class="project-tile">
-                <a href="https://github.com/s4ch1/Chester-Bennington-Tribute" target="_blank">Chester Bennington Tribute</a><br>
-                <img alt="Chester Bennington tribute page" src="./images/tp.png" height="50%" width="50%">
+                <h3>Chester Bennington Tribute</h3>
+                <a href="https://github.com/s4ch1/Chester-Bennington-Tribute" target="_blank">
+                    <img alt="Chester Bennington tribute page" src="./images/tp.png" height="50%" width="50%">
+                </a><br>
             </div>
             <div class="project-tile">
-                <a href="https://github.com/s4ch1/Survey-form" target="_blank">Survey Form</a><br>
-                <img alt="Survey form" src="./images/sf.png" height="50%" width="50%">
+                <h3>Survey Form</h3>
+                <a href="https://github.com/s4ch1/Survey-form" target="_blank">
+                    <img alt="Survey form" src="./images/sf.png" height="50%" width="50%">
+                </a><br>
             </div>
             <div class="project-tile">
-                <a href="https://github.com/s4ch1/Product-Landing-Page" target="_blank">Product Landing Page</a><br>
-                <img alt="Product landing page" src="./images/plp.png" height="50%" width="50%">
+                <h3>Product Landing Page</h3>
+                <a href="https://github.com/s4ch1/Product-Landing-Page" target="_blank">
+                    <img alt="Product landing page" src="./images/plp.png" height="50%" width="50%">
+                </a><br>
             </div>
             <div class="project-tile">
-                <a href="https://github.com/s4ch1/JS-Documentation" target="_blank">Technical Documentation Page</a><br>
-                <img alt="Technical documentation page" src="./images/JSd.png" height="50%" width="50%">
+                <h3>Technical Documentation Page</h3>
+                <a href="https://github.com/s4ch1/JS-Documentation" target="_blank">
+                    <img alt="Technical documentation page" src="./images/JSd.png" height="50%" width="50%">
+                </a><br>
+                
             </div>
         </section>
         <section id="contact">
             <h2>Let's work together...</h2>
-            <h4>How to contact me?</h4>
-            <a id="profile-link" href="https://github.com/s4ch1" target="_blank">Github</a>
-            <a id="profile-link" href="https://twitter.com/Iam_S4ch1" target="_blank">Twitter</a>
-            <a id="profile-link" href="mailto:iams4ch1@gmail.com">Email</a>
+            <a id="profile-link" href="mailto:iams4ch1@gmail.com">
+                <img alt="Email logo" src="./images/email-round-color.png" height="65px" width="65px">
+            </a>
+            <a id="profile-link" href="https://github.com/s4ch1" target="_blank">
+                <img alt="GitHub logo" src="./images/github.png" height="70px" width="70px">
+            </a>
+            <a id="profile-link" href="https://twitter.com/Iam_S4ch1" target="_blank">
+                <img alt="Twitter logo" src="./images/twitter-round.png" height="70px" width="70px">
+            </a>
+            
         </section>
     </main>
 </body>
